--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,11 @@ install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get -y install qt59base qt59svg qt59webengine --allow-unauthenticated &&
       source /opt/qt5*/bin/qt5*-env.sh
+      mkdir python && cd python && wget "https://www.python.org/ftp/python/3.6.4/Python-3.6.4.tar.xz" && tar -xvf Python-3.6.4.tar.xz
+      export CUSTOM_PYTHON_PREFIX="`pwd`/prefix" && cd Python-3.6.4
+      echo "Building Python to install to prefix $CUSTOM_PYTHON_PREFIX"
+      ./configure --prefix=$CUSTOM_PYTHON_PREFIX && make -j4 && make install
+      PYTHONHOME=$CUSTOM_PYTHON_PREFIX "$CUSTOM_PYTHON_PREFIX/bin/pip3" install jupyter
     ; fi
 
 after_success:
