Link against custom Python

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,13 @@ branches:
 matrix:
   include:
   - os: linux
-    env: TEST_COMMAND="qmake PREFIX=/usr APPIMAGE=1 ../src && make -j4" DEPLOY=1
+    env: BUILD_SYSTEM=qmake DEPLOY=1
   - os: linux
-    env: TEST_COMMAND="cmake ../src && make -j4"
+    env: BUILD_SYSTEM=cmake
   - os: osx
-    env: TEST_COMMAND="qmake ../src && make -j4" DEPLOY=1
+    env: BUILD_SYSTEM=qmake DEPLOY=1
   - os: osx
-    env: TEST_COMMAND="cmake ../src && make -j4"
+    env: BUILD_SYSTEM=cmake
 
 sudo: required
 dist: trusty
@@ -36,12 +36,13 @@ install:
     ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get -y install qt59base qt59svg qt59webengine --allow-unauthenticated &&
-      source /opt/qt5*/bin/qt5*-env.sh
-      mkdir python && cd python && wget "https://www.python.org/ftp/python/3.6.4/Python-3.6.4.tar.xz" && tar -xvf Python-3.6.4.tar.xz
-      export CUSTOM_PYTHON_PREFIX="`pwd`/prefix" && cd Python-3.6.4
-      echo "Building Python to install to prefix $CUSTOM_PYTHON_PREFIX"
-      ./configure --prefix=$CUSTOM_PYTHON_PREFIX && make -j4 && make install
-      PYTHONHOME=$CUSTOM_PYTHON_PREFIX "$CUSTOM_PYTHON_PREFIX/bin/pip3" install jupyter
+      source /opt/qt5*/bin/qt5*-env.sh &&
+      mkdir python && cd python && wget "https://www.python.org/ftp/python/3.6.4/Python-3.6.4.tar.xz" && tar -xf Python-3.6.4.tar.xz &&
+      export CUSTOM_PYTHON_PREFIX="`pwd`/prefix" && cd Python-3.6.4 &&
+      echo "Building Python to install to prefix $CUSTOM_PYTHON_PREFIX" &&
+      ./configure --prefix=$CUSTOM_PYTHON_PREFIX && make -j4 && make install > /dev/null &&
+      PYTHONHOME=$CUSTOM_PYTHON_PREFIX "$CUSTOM_PYTHON_PREFIX/bin/pip3" install jupyter &&
+      cd ../..
     ; fi
 
 after_success:
@@ -53,6 +54,7 @@ after_success:
         sudo make INSTALL_ROOT=appdir install &&
         sudo chown -R $USER appdir &&
         cp -r /usr/share/radare2 appdir/usr/share/ &&
+        cp -r "$CUSTOM_PYTHON_PREFIX" appdir/ &&
         wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" &&
         chmod a+x linuxdeployqt*.AppImage &&
         unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH &&
@@ -76,7 +78,19 @@ before_script:
 script:
   - mkdir build
   - cd build
-  - (eval "$TEST_COMMAND")
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        if [[ "$BUILD_SYSTEM" == "qmake" ]]; then
+            PKG_CONFIG_PATH="$CUSTOM_PYTHON_PREFIX/lib/pkgconfig" qmake PREFIX=/usr APPIMAGE=1 ../src && make -j4;
+        elif [[ "$BUILD_SYSTEM" == "qmake" ]]; then
+            cmake ../src && make -j4;
+       fi
+    elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+        if [[ "$BUILD_SYSTEM" == "qmake" ]]; then
+            qmake ../src && make -j4;
+        elif [[ "$BUILD_SYSTEM" == "qmake" ]]; then
+            cmake ../src && make -j4;
+       fi
+    fi
 
 deploy:
   skip_cleanup: true
