--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ install:
       mkdir python && cd python && wget "https://www.python.org/ftp/python/3.6.4/Python-3.6.4.tar.xz" && tar -xf Python-3.6.4.tar.xz &&
       export CUSTOM_PYTHON_PREFIX="`pwd`/prefix" && cd Python-3.6.4 &&
       echo "Building Python to install to prefix $CUSTOM_PYTHON_PREFIX" &&
-      ./configure --prefix=$CUSTOM_PYTHON_PREFIX && make -j4 && make install > /dev/null &&
-      PYTHONHOME=$CUSTOM_PYTHON_PREFIX "$CUSTOM_PYTHON_PREFIX/bin/pip3" install jupyter &&
+      ./configure --enable-shared --prefix=$CUSTOM_PYTHON_PREFIX && make -j4 && make install > /dev/null &&
+      PYTHONHOME=$CUSTOM_PYTHON_PREFIX LD_LIBRARY_PATH=$CUSTOM_PYTHON_PREFIX/lib "$CUSTOM_PYTHON_PREFIX/bin/pip3" install jupyter &&
       cd ../..
     ; fi
 
@@ -101,3 +101,4 @@ deploy:
     - "${FILE_TO_UPLOAD}"
   on:
     repo: thestr4ng3r/cutter
+    condition: $DEPLOY = 1
