--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ install:
       mkdir python && cd python && wget "https://www.python.org/ftp/python/3.6.4/Python-3.6.4.tar.xz" && tar -xf Python-3.6.4.tar.xz &&
       export CUSTOM_PYTHON_PREFIX="`pwd`/prefix" && cd Python-3.6.4 &&
       echo "Building Python to install to prefix $CUSTOM_PYTHON_PREFIX" &&
-      ./configure --prefix=$CUSTOM_PYTHON_PREFIX && make -j4 && make install > /dev/null &&
-      PYTHONHOME=$CUSTOM_PYTHON_PREFIX "$CUSTOM_PYTHON_PREFIX/bin/pip3" install jupyter &&
+      ./configure --enable-shared --prefix=$CUSTOM_PYTHON_PREFIX && make -j4 && make install > /dev/null &&
+      PYTHONHOME=$CUSTOM_PYTHON_PREFIX LD_LIBRARY_PATH=$CUSTOM_PYTHON_PREFIX/lib "$CUSTOM_PYTHON_PREFIX/bin/pip3" install jupyter &&
       cd ../..
     ; fi
 
@@ -54,12 +54,12 @@ after_success:
         sudo make INSTALL_ROOT=appdir install &&
         sudo chown -R $USER appdir &&
         cp -r /usr/share/radare2 appdir/usr/share/ &&
-        cp -r "$CUSTOM_PYTHON_PREFIX" appdir/ &&
+        cp -RT "$CUSTOM_PYTHON_PREFIX" appdir/usr/ &&
         wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" &&
         chmod a+x linuxdeployqt*.AppImage &&
         unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH &&
-        ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/*.desktop -bundle-non-qt-libs -verbose=2 &&
-        ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/*.desktop -appimage -verbose=2 &&
+        LD_LIBRARY_PATH=$CUSTOM_PYTHON_PREFIX/lib ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/*.desktop -bundle-non-qt-libs -no-strip -verbose=2 &&
+        LD_LIBRARY_PATH=$CUSTOM_PYTHON_PREFIX/lib ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/*.desktop -appimage -no-strip -verbose=2 &&
         find ./appdir -executable -type f -exec ldd {} \; | grep " => /usr" | cut -d " " -f 2-3 | sort | uniq &&
         export FILE_TO_UPLOAD="Cutter-x86_64.AppImage"
     ; fi
@@ -101,3 +101,4 @@ deploy:
     - "${FILE_TO_UPLOAD}"
   on:
     repo: thestr4ng3r/cutter
+    condition: $DEPLOY = 1
