--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,7 @@ after_success:
       chmod a+x linuxdeployqt*.AppImage &&
       unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH &&
       LD_LIBRARY_PATH=$CUSTOM_PYTHON_PREFIX/lib ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/*.desktop -bundle-non-qt-libs -no-strip -verbose=2 &&
+      rm -vf appdir/usr/lib/libnss3.so appdir/usr/lib/libnssutil3.so &&
       LD_LIBRARY_PATH=$CUSTOM_PYTHON_PREFIX/lib ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/*.desktop -appimage -no-strip -verbose=2 &&
       find ./appdir -executable -type f -exec ldd {} \; | grep " => /usr" | cut -d " " -f 2-3 | sort | uniq &&
       export FILE_TO_UPLOAD="Cutter-x86_64.AppImage"
