Fix RPATH for bundled python

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then   export PATH="/usr/local/opt/qt/bin:$PATH" ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then   source scripts/prepare_python_macos.sh    ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      sudo apt-get -y install qt59base qt59svg qt59webengine --allow-unauthenticated &&
+      sudo apt-get -y install qt59base qt59svg qt59webengine patchelf --allow-unauthenticated &&
       source /opt/qt5*/bin/qt5*-env.sh
     ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then source scripts/prepare_python_linux.sh    ; fi
